--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "deco2017-task-tracker",
+  "name": "deco2017-brew-journal",
   "version": "1.0.0",
-  "description": "Task tracking web application",
+  "description": "Coffee brewing tracking web application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "prestart": "parcel build ./public/index.html",
     "dev": "parcel serve ./public/index.html"
   },
-  "author": "Rob Dongas",
+  "author": "YU LUO",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "parcel": "^2.8.3"
