--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel": "^2.8.3"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "express": "^4.18.2",
     "sass": "^1.62.0"
   }
