--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
+    "accordion-js": "^3.3.4",
     "express": "^4.18.2",
     "sass": "^1.62.0"
   }
