--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@glidejs/glide": "^3.6.0",
     "a11y-dialog": "^7.5.2",
     "accordion-js": "^3.3.4",
+    "colorthief": "^2.4.0",
     "express": "^4.18.2",
     "sass": "^1.62.0"
   }
