--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "accordion-js": "^3.3.4",
     "colorthief": "^2.4.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "sass": "^1.62.0"
   }
 }
