--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "YU LUO",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "buffer": "^5.7.1",
     "parcel": "^2.8.3"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "a11y-dialog": "^7.5.2",
     "accordion-js": "^3.3.4",
     "colorthief": "^2.4.0",
+    "echarts": "^5.4.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "sass": "^1.62.0"
