--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "parcel build ./public/index.html --dist-dir dist --public-url ./ --no-scope-hoist",
     "start": "node server.js",
     "dev": "parcel serve ./public/index.html",
-    "vercel-build": "parcel build ./public/index.html --dist-dir dist --public-url ./",
+    "vercel-build": "parcel build ./public/index.html --dist-dir dist --public-url ./ --no-scope-hoist",
     "populate-images": "node populate-images.js",
     "populate-sample-data": "node populate-sample-data.js"
   },
